internal/xds/translator/testdata/readyroute/compressor-false.yaml
name: local_route
virtualHosts:
- domains:
  - '*'
  name: prometheus_stats
  routes:
  - match:
      prefix: /stats/prometheus
    route:
      cluster: prometheus_stats
