internal/xds/translator/testdata/readyroute/compressor-true.yaml
name: local_route
typedPerFilterConfig:
  envoy.filters.http.compression:
    '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
    disabled: true
virtualHosts:
- domains:
  - '*'
  name: prometheus_stats
  routes:
  - match:
      prefix: /stats/prometheus
    route:
      cluster: prometheus_stats
    typedPerFilterConfig:
      envoy.filters.http.compression:
        '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.CompressorPerRoute
        overrides:
          responseDirectionConfig: {}
